fixed phonegap bug. added min-height for mobile UI.

--- a/clients/html/css/style.css
+++ b/clients/html/css/style.css
@@ -266,6 +266,7 @@ select{
 	.wrapper {
 		padding: 2% 1%;
 		width:98%;
+		min-height: 500px;
 	}
 
 	.mobile-anchor{
